k8s/platform/base/ingress/haproxy-ingress/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: system
  labels:
    app.kubernetes.io/name: argocd-ingress
    app.kubernetes.io/part-of: bizkit
    app.kubernetes.io/component: ingress
  annotations:
    bizkit.io/git-sha: REPLACE_ME_GIT_SHA
    bizkit.io/deployed-at: REPLACE_ME_DEPLOYED_AT
    bizkit.io/deployed-by: REPLACE_ME_DEPLOYED_BY
    haproxy-ingress.github.io/allowlist-source-header: "CF-Connecting-IP"
    haproxy-ingress.github.io/allowlist-source-range: "54.116.28.173/32,10.0.255.30/32"
    haproxy-ingress.github.io/timeout-connect: "60s"
    haproxy-ingress.github.io/timeout-http-request: "30s"
    haproxy-ingress.github.io/timeout-keep-alive: "75s"
    haproxy-ingress.github.io/timeout-server: "300s"
spec:
  ingressClassName: haproxy
  rules:
    - host: argocd.cardcaro.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
