k8s/platform/base/ingress/haproxy-ingress/websocket-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bizkit-public-websocket-ingress
  namespace: system
  labels:
    app.kubernetes.io/name: bizkit-websocket-ingress
    app.kubernetes.io/part-of: bizkit
    app.kubernetes.io/component: ingress
  annotations:
    bizkit.io/git-sha: REPLACE_ME_GIT_SHA
    bizkit.io/deployed-at: REPLACE_ME_DEPLOYED_AT
    bizkit.io/deployed-by: REPLACE_ME_DEPLOYED_BY
    haproxy-ingress.github.io/timeout-connect: "60s"
    haproxy-ingress.github.io/timeout-http-request: "15s"
    haproxy-ingress.github.io/timeout-server: "1h"
    haproxy-ingress.github.io/timeout-tunnel: "1h"
spec:
  ingressClassName: haproxy
  tls:
    - hosts:
        - cardcaro.com
      secretName: cardcaro-com-tls
  rules:
    - host: cardcaro.com
      http:
        paths:
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: be-prod-proxy
                port:
                  number: 8080
          - path: /api/ws
            pathType: Prefix
            backend:
              service:
                name: be-prod-proxy
                port:
                  number: 8080
